test/tests/errors/error-array-bounds-not-int.sm
// true
// false
/**/
/**/

program {
    array x["a":1];
}